--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "tiptoe-app-ts",
-    "slug": "tiptoe-app-ts",
-    "version": "1.0.0",
+    "name": "TipToe",
+    "slug": "tiptoe-",
+    "version": "0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#010101"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -16,9 +16,16 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
-    },
+    	"description": "",
+		"ios": {
+			"bundleIdentifier": "jgb.solutions.tiptoe",
+			"buildNumber": "1",
+			"supportsTablet": true
+		},
+		"android": {
+			"package": "jgb.solutions.tiptoe",
+			"versionCode": 1
+		},
     "web": {
       "favicon": "./assets/favicon.png"
     }
