--- a/package.json
+++ b/package.json
@@ -8,15 +8,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.5",
+    "@react-native-community/async-storage": "~1.12.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.10.0",
+    "@react-navigation/native": "^5.8.0",
+    "@react-navigation/stack": "^5.10.0",
+    "axios": "^0.21.0",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "firebase": "7.9.0",
+    "phoenix": "^1.5.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "6.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
+    "react-native-web": "~0.13.12",
+    "zustand": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/phoenix": "^1.5.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
