--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
     "firebase": "7.9.0",
+    "graphql": "^15.4.0",
+    "native-base": "^2.13.14",
     "phoenix": "^1.5.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "6.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
