--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12",
-    "zustand": "^3.1.3"
+    "zustand": "^3.1.3",
+    "zustand-persist": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
