--- a/package.json
+++ b/package.json
@@ -8,24 +8,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.0",
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.10.0",
     "@react-navigation/native": "^5.8.0",
     "@react-navigation/stack": "^5.10.0",
-    "@apollo/react-hooks": "^3.1.0",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link": "^1.2.13",
     "apollo-link-context": "^1.0.19",
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
-    "graphql": "^14.5.5",
-    "graphql-tag": "^2.10.1",
     "axios": "^0.21.0",
+    "dayjs": "^1.9.6",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
     "firebase": "7.9.0",
+    "graphql": "^14.5.5",
+    "graphql-tag": "^2.10.1",
     "native-base": "^2.13.14",
     "phoenix": "^1.5.6",
     "react": "16.13.1",
