--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^5.10.0",
     "@react-navigation/native": "^5.8.0",
     "@react-navigation/stack": "^5.10.0",
+    "@types/lodash": "^4.14.165",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link": "^1.2.13",
@@ -27,6 +28,7 @@
     "firebase": "7.9.0",
     "graphql": "^14.5.5",
     "graphql-tag": "^2.10.1",
+    "lodash": "^4.17.20",
     "native-base": "^2.13.14",
     "phoenix": "^1.5.6",
     "react": "16.13.1",
