--- a/package.json
+++ b/package.json
@@ -1,57 +1,63 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "@apollo/react-hooks": "^3.1.0",
-    "@react-native-community/async-storage": "~1.12.0",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.10.0",
-    "@react-navigation/native": "^5.8.0",
-    "@react-navigation/stack": "^5.10.0",
-    "@types/lodash": "^4.14.165",
-    "apollo-cache-inmemory": "^1.6.3",
-    "apollo-client": "^2.6.4",
-    "apollo-link": "^1.2.13",
-    "apollo-link-context": "^1.0.19",
-    "apollo-link-error": "^1.1.12",
-    "apollo-link-http": "^1.5.16",
-    "axios": "^0.21.0",
-    "dayjs": "^1.9.6",
-    "expo": "~39.0.2",
-    "expo-status-bar": "~1.0.2",
-    "firebase": "7.9.0",
-    "graphql": "^14.5.5",
-    "graphql-tag": "^2.10.1",
-    "lodash": "^4.17.20",
-    "native-base": "^2.13.14",
-    "phoenix": "^1.5.6",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-hook-form": "6.0.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
-    "react-native-gifted-chat": "^0.16.3",
-    "react-native-modal": "^11.5.6",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.12",
-    "zustand": "^3.1.3",
-    "zustand-persist": "^0.3.0"
-  },
-  "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/phoenix": "^1.5.0",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~3.9.5"
-  },
-  "private": true
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"eject": "expo eject"
+	},
+	"dependencies": {
+		"@absinthe/socket": "^0.2.1",
+		"@absinthe/socket-apollo-link": "^0.2.1",
+		"@apollo/react-hooks": "^3.1.0",
+		"@jumpn/utils-graphql": "^0.6.0",
+		"@react-native-community/async-storage": "~1.12.0",
+		"@react-native-community/masked-view": "0.1.10",
+		"@react-navigation/bottom-tabs": "^5.10.0",
+		"@react-navigation/native": "^5.8.0",
+		"@react-navigation/stack": "^5.10.0",
+		"@types/lodash": "^4.14.165",
+		"apollo-cache-inmemory": "^1.6.3",
+		"apollo-client": "^2.6.4",
+		"apollo-link": "^1.2.13",
+		"apollo-link-context": "^1.0.19",
+		"apollo-link-error": "^1.1.12",
+		"apollo-link-http": "^1.5.16",
+		"axios": "^0.21.0",
+		"dayjs": "^1.9.6",
+		"expo": "~39.0.2",
+		"expo-status-bar": "~1.0.2",
+		"firebase": "7.9.0",
+		"graphql": "^15.4.0",
+		"graphql-request": "^3.3.0",
+		"graphql-tag": "^2.10.1",
+		"lodash": "^4.17.20",
+		"native-base": "^2.13.14",
+		"phoenix": "^1.5.6",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-hook-form": "6.0.0",
+		"react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+		"react-native-gesture-handler": "~1.7.0",
+		"react-native-gifted-chat": "^0.16.3",
+		"react-native-modal": "^11.5.6",
+		"react-native-reanimated": "~1.13.0",
+		"react-native-safe-area-context": "3.1.4",
+		"react-native-screens": "~2.10.1",
+		"react-native-web": "~0.13.12",
+		"zustand": "^3.1.3",
+		"zustand-persist": "^0.3.0"
+	},
+	"devDependencies": {
+		"@babel/core": "~7.9.0",
+		"@types/absinthe__socket": "^0.2.1",
+		"@types/absinthe__socket-apollo-link": "^0.2.1",
+		"@types/phoenix": "^1.5.0",
+		"@types/react": "~16.9.35",
+		"@types/react-dom": "~16.9.8",
+		"@types/react-native": "~0.63.2",
+		"typescript": "~3.9.5"
+	},
+	"private": true
 }
