--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@jumpn/utils-graphql": "^0.6.0",
 		"@react-native-community/async-storage": "~1.12.0",
 		"@react-native-community/masked-view": "0.1.10",
+		"@react-native-community/picker": "^1.8.1",
 		"@react-navigation/bottom-tabs": "^5.10.0",
 		"@react-navigation/native": "^5.8.0",
 		"@react-navigation/stack": "^5.10.0",
@@ -39,6 +40,7 @@
 		"react-dom": "16.13.1",
 		"react-hook-form": "6.0.0",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+		"react-native-elements": "^3.1.0",
 		"react-native-gesture-handler": "~1.7.0",
 		"react-native-gifted-chat": "^0.16.3",
 		"react-native-modal": "^11.5.6",
