--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
 		"@jumpn/utils-graphql": "^0.6.0",
 		"@react-native-community/async-storage": "~1.12.0",
 		"@react-native-community/masked-view": "0.1.10",
-		"@react-native-picker/picker": "^1.9.10",
 		"@react-navigation/bottom-tabs": "^5.10.0",
 		"@react-navigation/native": "^5.8.0",
 		"@react-navigation/stack": "^5.10.0",
@@ -40,6 +39,7 @@
 		"react-dom": "16.13.1",
 		"react-hook-form": "6.0.0",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+		"react-native-form-select-picker": "^0.0.10",
 		"react-native-gesture-handler": "~1.7.0",
 		"react-native-gifted-chat": "^0.16.3",
 		"react-native-modal": "^11.5.6",
@@ -47,6 +47,7 @@
 		"react-native-safe-area-context": "3.1.4",
 		"react-native-screens": "~2.10.1",
 		"react-native-web": "~0.13.12",
+		"react-native-webview": "^10.7.0",
 		"zustand": "^3.1.3",
 		"zustand-persist": "^0.3.0"
 	},
