--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"axios": "^0.21.0",
 		"dayjs": "^1.9.6",
 		"expo": "~39.0.2",
+		"expo-image-picker": "~9.1.0",
 		"expo-status-bar": "~1.0.2",
 		"firebase": "7.9.0",
 		"graphql": "^15.4.0",
@@ -46,6 +47,7 @@
 		"react-native-reanimated": "~1.13.0",
 		"react-native-safe-area-context": "3.1.4",
 		"react-native-screens": "~2.10.1",
+		"react-native-textarea": "^1.0.4",
 		"react-native-web": "~0.13.12",
 		"react-native-webview": "^10.7.0",
 		"zustand": "^3.1.3",
