--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
 	"main": "node_modules/expo/AppEntry.js",
 	"scripts": {
-		"start": "expo start",
+		"start": "EXPO_APP_ENV='development' expo start",
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web",
-		"eject": "expo eject"
+		"eject": "expo eject",
+		"publish:staging": "expo publish --release-channel staging",
+		"publish:prod": "expo publish --release-channel prod"
 	},
 	"dependencies": {
 		"@absinthe/socket": "^0.2.1",
@@ -27,7 +29,9 @@
 		"axios": "^0.21.0",
 		"dayjs": "^1.9.6",
 		"expo": "~39.0.2",
+		"expo-constants": "~9.2.0",
 		"expo-image-picker": "~9.1.0",
+		"expo-permissions": "~9.3.0",
 		"expo-status-bar": "~1.0.2",
 		"firebase": "7.9.0",
 		"graphql": "^15.4.0",
