--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"main": "node_modules/expo/AppEntry.js",
 	"scripts": {
 		"start": "EXPO_APP_ENV='development' expo start",
+		"start:staging": "EXPO_APP_ENV='staging' expo start",
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web",
