--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
 	"main": "node_modules/expo/AppEntry.js",
 	"scripts": {
 		"start": "EXPO_APP_ENV='development' expo start",
-		"start:staging": "EXPO_APP_ENV='staging' expo start",
+		"start:staging": "expo start",
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web",
-		"eject": "expo eject",
-		"publish:staging": "EXPO_APP_ENV='staging' expo publish",
-		"publish:prod": "EXPO_APP_ENV='production' expo publish"
+		"eject": "expo eject"
 	},
 	"dependencies": {
 		"@absinthe/socket": "^0.2.1",
