--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@absinthe/socket": "^0.2.1",
 		"@absinthe/socket-apollo-link": "^0.2.1",
 		"@apollo/react-hooks": "^3.1.0",
+		"@expo/vector-icons": "^12.0.3",
 		"@jumpn/utils-graphql": "^0.6.0",
 		"@react-native-community/async-storage": "~1.12.0",
 		"@react-native-community/masked-view": "0.1.10",
