--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"apollo-link-error": "^1.1.12",
 		"apollo-link-http": "^1.5.16",
 		"axios": "^0.21.0",
+		"dateformat": "^4.5.1",
 		"dayjs": "^1.9.6",
 		"expo": "~39.0.2",
 		"expo-constants": "~9.2.0",
@@ -46,6 +47,7 @@
 		"react-native-form-select-picker": "^0.0.10",
 		"react-native-gesture-handler": "~1.7.0",
 		"react-native-gifted-chat": "^0.16.3",
+		"react-native-material-menu": "^1.2.0",
 		"react-native-modal": "^11.5.6",
 		"react-native-reanimated": "~1.13.0",
 		"react-native-safe-area-context": "3.1.4",
