--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
 		"@apollo/react-hooks": "^3.1.0",
 		"@jumpn/utils-graphql": "^0.6.0",
 		"@react-native-community/async-storage": "~1.12.0",
+		"@react-native-community/cameraroll": "^4.0.2",
 		"@react-native-community/masked-view": "0.1.10",
 		"@react-navigation/bottom-tabs": "^5.10.0",
 		"@react-navigation/native": "^5.8.0",
 		"@react-navigation/stack": "^5.10.0",
+		"@remobile/react-native-camera-roll-picker": "^1.0.2",
 		"@types/lodash": "^4.14.165",
 		"apollo-cache-inmemory": "^1.6.3",
 		"apollo-client": "^2.6.4",
@@ -31,6 +33,9 @@
 		"expo": "~39.0.2",
 		"expo-constants": "~9.2.0",
 		"expo-image-picker": "~9.1.0",
+		"expo-images-picker": "^1.3.0",
+		"expo-media-library": "~9.2.1",
+		"expo-multiple-media-imagepicker": "^1.2.1",
 		"expo-permissions": "~9.3.0",
 		"expo-status-bar": "~1.0.2",
 		"firebase": "7.9.0",
@@ -44,9 +49,11 @@
 		"react-dom": "16.13.1",
 		"react-hook-form": "6.0.0",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+		"react-native-camera-roll-picker": "^2.0.0",
 		"react-native-form-select-picker": "^0.0.10",
 		"react-native-gesture-handler": "~1.7.0",
 		"react-native-gifted-chat": "^0.16.3",
+		"react-native-image-picker": "^3.2.1",
 		"react-native-material-menu": "^1.2.0",
 		"react-native-modal": "^11.5.6",
 		"react-native-reanimated": "~1.13.0",
