--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@react-navigation/native": "^5.8.0",
 		"@react-navigation/stack": "^5.10.0",
 		"@remobile/react-native-camera-roll-picker": "^1.0.2",
+		"@types/dateformat": "^3.0.1",
 		"@types/lodash": "^4.14.165",
 		"apollo-cache-inmemory": "^1.6.3",
 		"apollo-client": "^2.6.4",
