--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"graphql-request": "^3.3.0",
 		"graphql-tag": "^2.10.1",
 		"lodash": "^4.17.20",
+		"moment": "^2.29.1",
 		"native-base": "^2.13.14",
 		"phoenix": "^1.5.6",
 		"react": "16.13.1",
