--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
 		"@apollo/react-hooks": "^3.1.0",
 		"@jumpn/utils-graphql": "^0.6.0",
 		"@react-native-community/async-storage": "~1.12.0",
-		"@react-native-community/cameraroll": "^4.0.2",
 		"@react-native-community/masked-view": "0.1.10",
 		"@react-navigation/bottom-tabs": "^5.10.0",
 		"@react-navigation/native": "^5.8.0",
@@ -34,8 +33,6 @@
 		"expo": "~39.0.2",
 		"expo-constants": "~9.2.0",
 		"expo-image-picker": "~9.1.0",
-		"expo-images-picker": "^1.3.0",
-		"expo-media-library": "~9.2.1",
 		"expo-multiple-media-imagepicker": "^1.2.1",
 		"expo-permissions": "~9.3.0",
 		"expo-status-bar": "~1.0.2",
@@ -51,7 +48,6 @@
 		"react-dom": "16.13.1",
 		"react-hook-form": "6.0.0",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-		"react-native-camera-roll-picker": "^2.0.0",
 		"react-native-form-select-picker": "^0.0.10",
 		"react-native-gesture-handler": "~1.7.0",
 		"react-native-gifted-chat": "^0.16.3",
@@ -64,6 +60,7 @@
 		"react-native-textarea": "^1.0.4",
 		"react-native-web": "~0.13.12",
 		"react-native-webview": "^10.7.0",
+		"typings": "^2.1.1",
 		"zustand": "^3.1.3",
 		"zustand-persist": "^0.3.0"
 	},
