Added expo dependencies

--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
 		"dateformat": "^4.5.1",
 		"dayjs": "^1.9.6",
 		"expo": "~39.0.2",
+		"expo-camera": "~9.0.0",
 		"expo-constants": "~9.2.0",
 		"expo-image-picker": "~9.1.0",
+		"expo-media-library": "~9.2.1",
 		"expo-multiple-media-imagepicker": "^1.2.1",
 		"expo-permissions": "~9.3.0",
 		"expo-status-bar": "~1.0.2",
