--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
 		"dateformat": "^4.5.1",
 		"dayjs": "^1.9.6",
 		"expo": "~39.0.2",
+		"expo-av": "~8.6.0",
 		"expo-camera": "~9.0.0",
 		"expo-constants": "~9.2.0",
+		"expo-file-system": "^11.0.2",
+		"expo-image-picker": "^10.1.4",
 		"expo-media-library": "~9.2.1",
 		"expo-multiple-media-imagepicker": "^1.2.1",
 		"expo-permissions": "~9.3.0",
@@ -73,6 +76,7 @@
 		"@types/react": "~16.9.35",
 		"@types/react-dom": "~16.9.8",
 		"@types/react-native": "~0.63.2",
+		"@types/react-native-vector-icons": "^6.4.7",
 		"typescript": "~3.9.5"
 	},
 	"private": true
