--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"react-hook-form": "6.0.0",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
 		"react-native-confirm-dialog": "^0.1.0",
+		"react-native-dotenv": "^2.6.2",
 		"react-native-form-select-picker": "^0.0.10",
 		"react-native-gesture-handler": "~1.7.0",
 		"react-native-gifted-chat": "^0.16.3",
