--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@absinthe/socket-apollo-link": "^0.2.1",
 		"@apollo/react-hooks": "^3.1.0",
 		"@jumpn/utils-graphql": "^0.6.0",
+		"@react-native-async-storage/async-storage": "^1.13.0",
 		"@react-native-community/async-storage": "~1.12.0",
 		"@react-native-community/masked-view": "0.1.10",
 		"@react-navigation/bottom-tabs": "^5.10.0",
@@ -35,8 +36,7 @@
 		"expo-av": "~8.6.0",
 		"expo-camera": "~9.0.0",
 		"expo-constants": "~9.2.0",
-		"expo-file-system": "^11.0.2",
-		"expo-image-picker": "^10.1.4",
+		"expo-image-picker": "~9.1.1",
 		"expo-media-library": "~9.2.1",
 		"expo-multiple-media-imagepicker": "^1.2.1",
 		"expo-permissions": "~9.3.0",
@@ -66,7 +66,7 @@
 		"react-native-screens": "~2.10.1",
 		"react-native-textarea": "^1.0.4",
 		"react-native-web": "~0.13.12",
-		"react-native-webview": "^10.7.0",
+		"react-native-webview": "10.7.0",
 		"typings": "^2.1.1",
 		"zustand": "^3.1.3",
 		"zustand-persist": "^0.3.0"
