--- a/package.json
+++ b/package.json
@@ -13,16 +13,13 @@
 		"@absinthe/socket-apollo-link": "^0.2.1",
 		"@apollo/react-hooks": "^3.1.0",
 		"@jumpn/utils-graphql": "^0.6.0",
-		"@react-native-async-storage/async-storage": "^1.13.0",
-		"@react-native-community/async-storage": "~1.12.0",
+		"@react-native-async-storage/async-storage": "~1.15.0",
 		"@react-native-community/masked-view": "0.1.10",
 		"@react-navigation/bottom-tabs": "^5.10.0",
 		"@react-navigation/native": "^5.8.0",
 		"@react-navigation/stack": "^5.10.0",
 		"@remobile/react-native-camera-roll-picker": "^1.0.2",
-		"@stripe/stripe-react-native": "^0.1.4",
-		"@types/dateformat": "^3.0.1",
-		"@types/lodash": "^4.14.165",
+		"@stripe/stripe-react-native": "^0.1.5",
 		"apollo-cache-inmemory": "^1.6.3",
 		"apollo-client": "^2.6.4",
 		"apollo-link": "^1.2.13",
@@ -32,16 +29,16 @@
 		"axios": "^0.21.0",
 		"dateformat": "^4.5.1",
 		"dayjs": "^1.9.6",
-		"expo": "~39.0.2",
-		"expo-av": "~8.6.0",
-		"expo-camera": "~9.0.0",
-		"expo-constants": "~9.2.0",
-		"expo-image-picker": "~9.1.1",
-		"expo-media-library": "~9.2.1",
+		"expo": "^42.0.0",
+		"expo-av": "~9.2.3",
+		"expo-camera": "~11.2.1",
+		"expo-constants": "~11.0.1",
+		"expo-image-picker": "~10.2.2",
+		"expo-media-library": "~12.1.2",
 		"expo-multiple-media-imagepicker": "^1.2.1",
-		"expo-permissions": "~9.3.0",
-		"expo-status-bar": "~1.0.2",
-		"firebase": "7.9.0",
+		"expo-permissions": "~12.1.1",
+		"expo-status-bar": "~1.0.4",
+		"firebase": "8.2.3",
 		"graphql": "^15.4.0",
 		"graphql-request": "^3.3.0",
 		"graphql-tag": "^2.10.1",
@@ -52,21 +49,21 @@
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
 		"react-hook-form": "6.0.0",
-		"react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+		"react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
 		"react-native-confirm-dialog": "^0.1.0",
 		"react-native-dotenv": "^2.6.2",
 		"react-native-form-select-picker": "^0.0.10",
-		"react-native-gesture-handler": "~1.7.0",
+		"react-native-gesture-handler": "~1.10.2",
 		"react-native-gifted-chat": "^0.16.3",
 		"react-native-image-picker": "^3.2.1",
 		"react-native-material-menu": "^1.2.0",
 		"react-native-modal": "^11.5.6",
-		"react-native-reanimated": "~1.13.0",
-		"react-native-safe-area-context": "3.1.4",
-		"react-native-screens": "~2.10.1",
+		"react-native-reanimated": "~2.2.0",
+		"react-native-safe-area-context": "3.2.0",
+		"react-native-screens": "~3.4.0",
 		"react-native-textarea": "^1.0.4",
 		"react-native-web": "~0.13.12",
-		"react-native-webview": "10.7.0",
+		"react-native-webview": "11.6.2",
 		"typings": "^2.1.1",
 		"zustand": "^3.1.3",
 		"zustand-persist": "^0.3.0"
@@ -80,7 +77,9 @@
 		"@types/react-dom": "~16.9.8",
 		"@types/react-native": "~0.63.2",
 		"@types/react-native-vector-icons": "^6.4.7",
-		"typescript": "~3.9.5"
+		"typescript": "~4.0.0",
+		"@types/dateformat": "^3.0.1",
+		"@types/lodash": "^4.14.165"
 	},
 	"private": true
 }
