--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"dateformat": "^4.5.1",
 		"dayjs": "^1.9.6",
 		"expo": "^42.0.0",
+		"expo-app-loading": "^1.1.2",
 		"expo-av": "~9.2.3",
 		"expo-camera": "~11.2.1",
 		"expo-constants": "~11.0.1",
@@ -72,14 +73,14 @@
 		"@babel/core": "~7.9.0",
 		"@types/absinthe__socket": "^0.2.1",
 		"@types/absinthe__socket-apollo-link": "^0.2.1",
+		"@types/dateformat": "^3.0.1",
+		"@types/lodash": "^4.14.165",
 		"@types/phoenix": "^1.5.0",
 		"@types/react": "~16.9.35",
 		"@types/react-dom": "~16.9.8",
 		"@types/react-native": "~0.63.2",
 		"@types/react-native-vector-icons": "^6.4.7",
-		"typescript": "~4.0.0",
-		"@types/dateformat": "^3.0.1",
-		"@types/lodash": "^4.14.165"
+		"typescript": "~4.0.0"
 	},
 	"private": true
 }
