--- a/app.json
+++ b/app.json
@@ -1,32 +1,40 @@
 {
-  "expo": {
-    "name": "tiptoe-app",
-    "slug": "tiptoe-app",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
-  }
+	"expo": {
+		"name": "TipToe",
+		"slug": "tiptoe-",
+		"version": "0.1",
+		"orientation": "portrait",
+		"icon": "./assets/icon.png",
+		"splash": {
+			"image": "./assets/splash.png",
+			"resizeMode": "contain",
+			"backgroundColor": "#010101"
+		},
+		"updates": {
+			"fallbackToCacheTimeout": 0
+		},
+		"assetBundlePatterns": ["**/*"],
+		"description": "",
+		"ios": {
+			"bundleIdentifier": "jgb.solutions.tiptoep.app",
+			"buildNumber": "1",
+			"supportsTablet": true
+		},
+		"android": {
+			"package": "jgb.solutions.tiptoe.app",
+			"versionCode": 1
+		},
+		"web": {
+			"favicon": "./assets/favicon.png"
+		},
+		"plugins": [
+			[
+				"@stripe/stripe-react-native",
+				{
+					"merchantIdentifier": "string | string",
+					"enableGooglePay": false
+				}
+			]
+		]
+	}
 }
