--- a/package.json
+++ b/package.json
@@ -1,25 +1,62 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "expo": "~42.0.1",
-    "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
-  },
-  "private": true
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"eject": "expo eject"
+	},
+	"dependencies": {
+		"@absinthe/socket-apollo-link": "^0.2.1",
+		"@apollo/react-hooks": "^3.1.0",
+		"@expo-google-fonts/roboto": "^0.2.0",
+		"@react-native-async-storage/async-storage": "~1.15.0",
+		"@react-navigation/bottom-tabs": "^5.10.0",
+		"@react-navigation/native": "^5.8.0",
+		"@react-navigation/stack": "^5.10.0",
+		"@stripe/stripe-react-native": "^0.1.5",
+		"apollo-cache-inmemory": "^1.6.3",
+		"apollo-client": "^2.6.4",
+		"apollo-link": "^1.2.13",
+		"apollo-link-context": "^1.0.19",
+		"apollo-link-error": "^1.1.12",
+		"apollo-link-http": "^1.5.16",
+		"expo": "~42.0.1",
+		"expo-app-loading": "^1.1.2",
+		"expo-av": "~9.2.3",
+		"expo-font": "~9.2.1",
+		"expo-image-picker": "~10.2.2",
+		"expo-media-library": "~12.1.2",
+		"expo-permissions": "^12.1.1",
+		"expo-status-bar": "~1.0.4",
+		"graphql-request": "^3.4.0",
+		"graphql-tag": "^2.12.5",
+		"moment": "^2.29.1",
+		"native-base": "^2.13.14",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-hook-form": "6.0.0",
+		"react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+		"react-native-confirm-dialog": "^0.1.0",
+		"react-native-dotenv": "^3.1.1",
+		"react-native-form-select-picker": "^0.0.12",
+		"react-native-gesture-handler": "~1.10.2",
+		"react-native-gifted-chat": "^0.16.3",
+		"react-native-material-menu": "^1.2.0",
+		"react-native-modal": "^12.0.2",
+		"react-native-screens": "~3.4.0",
+		"react-native-textarea": "^1.0.4",
+		"react-native-web": "~0.13.12",
+		"react-native-webview": "11.6.2",
+		"zustand": "^3.5.7",
+		"zustand-persist": "^0.3.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.9.0",
+		"@types/react": "~16.9.35",
+		"@types/react-native": "~0.63.2",
+		"typescript": "~4.0.0"
+	},
+	"private": true
 }
