--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"apollo-link-context": "^1.0.19",
 		"apollo-link-error": "^1.1.12",
 		"apollo-link-http": "^1.5.16",
+		"babel-plugin-inline-dotenv": "^1.6.0",
 		"expo": "~42.0.1",
 		"expo-app-loading": "^1.1.2",
 		"expo-av": "~9.2.3",
@@ -39,7 +40,6 @@
 		"react-hook-form": "6.0.0",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
 		"react-native-confirm-dialog": "^0.1.0",
-		"react-native-dotenv": "^3.1.1",
 		"react-native-form-select-picker": "^0.0.12",
 		"react-native-gesture-handler": "~1.10.2",
 		"react-native-gifted-chat": "^0.16.3",
