--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"expo-media-library": "~12.1.2",
 		"expo-multiple-media-imagepicker": "^1.2.1",
 		"expo-permissions": "~12.1.1",
+		"expo-splash-screen": "~0.11.2",
 		"expo-status-bar": "~1.0.4",
 		"firebase": "8.2.3",
 		"graphql": "^15.4.0",
