--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"react-hook-form": "6.0.0",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
 		"react-native-confirm-dialog": "^0.1.0",
+		"react-native-dotenv": "^3.1.1",
 		"react-native-form-select-picker": "^0.0.12",
 		"react-native-gesture-handler": "~1.10.2",
 		"react-native-gifted-chat": "^0.16.3",
@@ -56,6 +57,7 @@
 		"@babel/core": "^7.9.0",
 		"@types/react": "~16.9.35",
 		"@types/react-native": "~0.63.2",
+		"@types/react-native-vector-icons": "^6.4.8",
 		"typescript": "~4.0.0"
 	},
 	"private": true
