--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
 		"apollo-link-context": "^1.0.19",
 		"apollo-link-error": "^1.1.12",
 		"apollo-link-http": "^1.5.16",
+		"aws-sdk": "^2.949.0",
 		"babel-plugin-inline-dotenv": "^1.6.0",
 		"expo": "~42.0.1",
 		"expo-app-loading": "^1.1.2",
 		"expo-av": "~9.2.3",
+		"expo-camera": "~11.2.1",
 		"expo-font": "~9.2.1",
 		"expo-image-picker": "~10.2.2",
 		"expo-media-library": "~12.1.2",
@@ -57,6 +59,7 @@
 		"@babel/core": "^7.9.0",
 		"@types/react": "~16.9.35",
 		"@types/react-native": "~0.63.2",
+		"@types/react-native-aws3": "0.0.1",
 		"@types/react-native-vector-icons": "^6.4.8",
 		"typescript": "~4.0.0"
 	},
