--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@react-navigation/native": "^5.8.0",
 		"@react-navigation/stack": "^5.10.0",
 		"@stripe/stripe-react-native": "^0.1.5",
+		"@types/node": "^16.4.0",
 		"apollo-cache-inmemory": "^1.6.3",
 		"apollo-client": "^2.6.4",
 		"apollo-link": "^1.2.13",
@@ -28,6 +29,7 @@
 		"expo-app-loading": "^1.1.2",
 		"expo-av": "~9.2.3",
 		"expo-camera": "~11.2.1",
+		"expo-file-system": "~11.1.3",
 		"expo-font": "~9.2.1",
 		"expo-image-picker": "~10.2.2",
 		"expo-media-library": "~12.1.2",
@@ -47,7 +49,9 @@
 		"react-native-gesture-handler": "~1.10.2",
 		"react-native-gifted-chat": "^0.16.3",
 		"react-native-material-menu": "^1.2.0",
+		"react-native-mime-types": "^2.3.0",
 		"react-native-modal": "^12.0.2",
+		"react-native-path": "^0.0.5",
 		"react-native-screens": "~3.4.0",
 		"react-native-textarea": "^1.0.4",
 		"react-native-web": "~0.13.12",
