--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@react-navigation/bottom-tabs": "^5.10.0",
 		"@react-navigation/native": "^5.8.0",
 		"@react-navigation/stack": "^5.10.0",
-		"@stripe/stripe-react-native": "^0.1.5",
+		"@stripe/stripe-react-native": "0.1.4",
 		"@types/node": "^16.4.0",
 		"apollo-cache-inmemory": "^1.6.3",
 		"apollo-client": "^2.6.4",
@@ -28,7 +28,7 @@
 		"expo": "~42.0.1",
 		"expo-app-loading": "^1.1.2",
 		"expo-av": "~9.2.3",
-		"expo-camera": "~11.2.1",
+		"expo-camera": "~11.2.2",
 		"expo-file-system": "~11.1.3",
 		"expo-font": "~9.2.1",
 		"expo-image-picker": "~10.2.2",
@@ -43,7 +43,6 @@
 		"react-dom": "16.13.1",
 		"react-hook-form": "6.0.0",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-		"react-native-confirm-dialog": "^0.1.0",
 		"react-native-dotenv": "^3.1.1",
 		"react-native-form-select-picker": "^0.0.12",
 		"react-native-gesture-handler": "~1.10.2",
