--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@react-navigation/bottom-tabs": "^5.10.0",
 		"@react-navigation/native": "^5.8.0",
 		"@react-navigation/stack": "^5.10.0",
-		"@stripe/stripe-react-native": "^0.1.5",
+		"@stripe/stripe-react-native": "0.1.4",
 		"@types/node": "^16.4.0",
 		"apollo-cache-inmemory": "^1.6.3",
 		"apollo-client": "^2.6.4",
