--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"react-native-mime-types": "^2.3.0",
 		"react-native-modal": "^12.0.2",
 		"react-native-path": "^0.0.5",
+		"react-native-picker-select": "^8.0.4",
 		"react-native-screens": "~3.4.0",
 		"react-native-textarea": "^1.0.4",
 		"react-native-web": "~0.13.12",
