--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"react-native-material-menu": "^1.2.0",
 		"react-native-mime-types": "^2.3.0",
 		"react-native-modal": "^12.0.2",
+		"react-native-paper": "^4.9.2",
 		"react-native-path": "^0.0.5",
 		"react-native-picker-select": "^8.0.4",
 		"react-native-screens": "~3.4.0",
